# mcp-course

./: README.md  requirements.txt
.github/workflows/: build_documentation.yml  build_pr_documentation.yml
projects/unit3/smart-file-analysis/starter/: README.md  pyproject.toml  server.py
projects/unit3/starter/: server.py
units/en/: _toctree.yml
units/en/unit0/: _toctree.yml  introduction.mdx
units/en/unit1/: _toctree.yml  architectural-components.mdx  capabilities.mdx  communication-protocol.mdx  configuration.mdx  gradio-mcp.mdx  key-concepts.mdx  mcp-clients.mdx  quiz1.mdx  quiz2.mdx  sdk.mdx  what-is-mcp.mdx
units/en/unit2/: _toctree.yml  architectural-components.mdx  building-server.mdx  capabilities.mdx  clients.mdx  communication-protocol.mdx  configuration.mdx  continue-client.mdx  cursor-host.mdx  developing-clients.mdx  environment-setup.mdx  gradio-client.mdx  gradio-server.mdx  hub-mcp-servers.mdx  introduction.mdx  lemonade-server.mdx  quiz2.mdx  server-capabilities.mdx  tiny-agents.mdx
units/en/unit3/: NEXT_STEPS.md  _toctree.yml  advanced-features.mdx  build-mcp-server.mdx  building-server.mdx  conclusion.mdx  configuration.mdx  developing-clients.mdx  environment-setup.mdx  final-project.mdx  github-actions-integration.mdx  gradio-mcp.mdx  hub-mcp-servers.mdx  hugging-face-hub-integration.mdx  huggingface-ecosystem.mdx  implementation_plan.md  implementation_plan_enhancements.md  introduction.mdx  limitations.mdx  mcp-client.mdx  mcp-ecosystem.mdx  practical-exercise.mdx  quiz.mdx  security.mdx  server-capabilities.mdx  slack-notification.mdx  (+4 more)
(+29 files in other folders)
